# game

./: .env  .env.example  README.md  README_SULTANS_GAME.md  WebSocket聊天系统使用指南.md  chat_client.html  demo_brothel_scene.py  demo_complete_follower_system.py  demo_follower_choice_system.py  demo_new_agent_system.py  demo_websocket_chat.py  pyproject.toml  requirements.txt  start_game.py  start_websocket_server.py  sultans_game_app.py  test.md  test_card_auto_trigger.py  test_coordination_debug.py  test_improved_agents.py  test_llm_simple.py  test_realtime_update.py  test_scene_values_fix.py  test_system.py  改进后的智能体架构说明.md  智能体系统架构说明.md  苏丹的游戏多智能体系统研究报告.md  配置完成总结.md  随从选择游戏机制设计方案.md  随从选择系统架构总结.md  项目完成总结.md
sultans_game/: __init__.py  agents.py  cards.py  config.py  models.py  tools.py  websocket_server.py
sultans_game/agents/: __init__.py  agent_coordinator.py  agent_manager.py  agent_registry.py  base_agent.py  courtesan_agent.py  evaluator_agent.py  follower_agent.py  madam_agent.py  merchant_agent.py  narrator_agent.py  scene_config.py
sultans_game/server/: __init__.py  agent_response_manager.py  game_manager.py  message_broadcaster.py  message_handler.py  room_manager.py  types.py  websocket_models.py
