[project]
name = "xiaochengxu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.130.0",
    "httpx[socks]>=0.28.1",
    "langchain-openai>=0.3.23",
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
